--- a/sections/resumen.tex
+++ b/sections/resumen.tex
@@ -3,15 +3,15 @@
     El proyecto surge de la necesidad de cargar la batería de una bicicleta eléctrica con asistencia al pedaleo, 
     complementando los proyectos realizados por los alumnos de la cátedra Proyecto Final durante el año 2021.
 
-    Se desarrollará un cargador para baterías de litio de 36V de diferentes capacidades,
+    Se está desarrollando un cargador para baterías de litio de 36V de diferentes capacidades,
     generalmente utilizadas en vehículos de transporte,
     con la finalidad de ofrecer una carga segura y eficaz.
     El uso de baterías de este tipo está en constante crecimiento y, 
     debido a que el litio es un material altamente reactivo,
     es necesario que el proceso de carga se realice de manera correcta.
     
-    Dentro de un limite de tiempo y presupuestario, mediante actividades ordenadas y coordinadas,
-    se combinarán diferentes tipos de recursos para lograr construir el cargador que cumpla con
-    todas las especificaciones previstas. 
+    En este informe se hará una descripcion de las decisiones tomadas durante la etapa de diseño,
+    detallando tanto sobre los avances como los problemas enfrentados,
+    junto con las respectivas soluciones propuestas. 
 
 \end{abstract}
