--- a/biblio.bib
+++ b/biblio.bib
@@ -1,35 +1,48 @@
 @book{mohan,
-	title     = {Power Electronics: Converters, Applications, and Design},
-	author    = {Ned Mohan and Tore M. Undeland and William P. Robbins},
-	publisher = {Wiley},
-	isbn      = {978047122693},
-	year      = {2002},
-	edition   = {3}
+  title     = {Power Electronics: Converters, Applications, and Design},
+  author    = {Ned Mohan and Tore M. Undeland and William P. Robbins},
+  publisher = {Wiley},
+  isbn      = {978047122693},
+  year      = {2002},
+  edition   = {3}
 }
 
 @book{hart,
-   title =     {Power Electronics},
-   author =    {Daniel W. Hart},
-   publisher = {McGraw-Hill Science/Engineering/Math},
-   isbn =      {9780073380674},
-   year =      {2010},
-   edition =   {1},
+  title     = {Power Electronics},
+  author    = {Daniel W. Hart},
+  publisher = {McGraw-Hill Science/Engineering/Math},
+  isbn      = {9780073380674},
+  year      = {2010},
+  edition   = {1}
 }
 
 @book{pressman,
-	title     = {Switching Power Supply Design},
-	author    = {Abraham Pressman and Keith Billings and Taylor Morey},
-	publisher = {McGraw-Hill Professional},
-	isbn      = {9780071594325},
-	year      = {2009},
-	edition   = {3}
+  title     = {Switching Power Supply Design},
+  author    = {Abraham Pressman and Keith Billings and Taylor Morey},
+  publisher = {McGraw-Hill Professional},
+  isbn      = {9780071594325},
+  year      = {2009},
+  edition   = {3}
+}
+
+@article{bateria,
+  author          = {Ahmad Rahmoun and Helmuth Biechl},
+  journal		  = {PRZEGLĄD ELEKTROTECHNICZNY},
+  title           = {Modelling of Li-ion batteries using equivalent circuit diagrams},
+  year            = {2012}
 }
 
 @manual{ncr18650ga,
-	organization = {Panasonic},
-	title        = {Lithium Ion Battery},
-	url          = {https://www.hurt.com.pl/prods/bat/_li_ion/ncr18650ga.pdf},
-	number       = {NCR18650GA},
-	year         = {2015},
-	month        = {4}
+  organization = {Panasonic},
+  title        = {Lithium Ion Battery},
+  url          = {https://www.hurt.com.pl/prods/bat/_li_ion/ncr18650ga.pdf},
+  number       = {NCR18650GA},
+  year         = {2015},
+  month        = {4}
+}
+
+@misc{ltspice,
+  author = {Analog Devices},
+  title  = {LTspice},
+  url    = {https://www.analog.com/en/design-center/design-tools-and-calculators/ltspice-simulator.html}
 }
