--- a/biblio.bib
+++ b/biblio.bib
@@ -26,10 +26,11 @@
 }
 
 @article{bateria,
-  author          = {Ahmad Rahmoun and Helmuth Biechl},
-  journal		  = {PRZEGLĄD ELEKTROTECHNICZNY},
-  title           = {Modelling of Li-ion batteries using equivalent circuit diagrams},
-  year            = {2012}
+  author  = {Ahmad Rahmoun and Helmuth Biechl},
+  journal = {PRZEGLĄD ELEKTROTECHNICZNY},
+  title   = {Modelling of Li-ion batteries using equivalent circuit diagrams},
+  year    = {2012},
+  url     = {http://pe.org.pl/articles/2012/7b/40.pdf}
 }
 
 @manual{ncr18650ga,
