--- a/biblio.bib
+++ b/biblio.bib
@@ -33,6 +33,14 @@
   url     = {http://pe.org.pl/articles/2012/7b/40.pdf}
 }
 
+@article{bateria_espanol,
+  author  = {R. Iglesias and A. Lago and A. Nogueiras and C. Martínez-Peñalver and J. Marcos and C. Quintans and M.J. Moure and M.D. Valdés },
+  journal = {Departamento de Tecnología Electrónica, Universidad de Vigo},
+  title   = {Modelado y Simulación de una Batería de Ion-Litio Comercial Multicelda},
+  year    = {2012},
+  url     = {http://quintans.webs.uvigo.es/documentos/2012-SAAEI-0464-gf-000126.pdf}
+}
+
 @manual{ncr18650ga,
   organization = {Panasonic},
   title        = {Lithium Ion Battery},
