--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,7 @@
 \usepackage{listings}
 \usepackage{enumitem}
 \usepackage{float}
+\usepackage{subcaption}
 
 \usepackage[style=ieee]{biblatex}
 \usepackage{csquotes}
