--- a/biblio.bib
+++ b/biblio.bib
@@ -27,7 +27,7 @@
 
 @article{bateria,
   author  = {Ahmad Rahmoun and Helmuth Biechl},
-  journal = {PRZEGLĄD ELEKTROTECHNICZNY},
+  journal = {PRZEGLAD ELEKTROTECHNICZNY},
   title   = {Modelling of Li-ion batteries using equivalent circuit diagrams},
   year    = {2012},
   url     = {http://pe.org.pl/articles/2012/7b/40.pdf}
