--- a/main.tex
+++ b/main.tex
@@ -22,15 +22,15 @@
     \vspace{1cm}
     {\bfseries\LARGE Universidad Nacional de La Plata \par}
     \vspace{1cm}
-    {\scshape\LARGE Facultad de Ingenier\'ia \par}
+    {\scshape\LARGE Facultad de Ingeniería \par}
     \vspace{2cm}
-    {\scshape\Huge Cargador de Bater\'ias de Litio de 36V con corriente de salida variable \par}
+    {\scshape\Huge Cargador de Baterías de Litio de 36V con corriente de salida variable \par}
     \vspace{3cm}
-    {\itshape\Large C\'atedra de Proyecto Final (E0227) \par}
+    {\itshape\Large Cátedra de Proyecto Final (E0227) \par}
     \vfill
     {\Large Autores: \par}
-    {\large CABRERA, Nicol\'as \par}
-    {\large S\'ANCHEZ CROCE, Enzo Imanol \par}
+    {\large CABRERA, Nicolás \par}
+    {\large SÁNCHEZ CROCE, Enzo Imanol \par}
     \vfill
     {\Large 2022 \par}
 \end{titlepage}
