Bug Fix - no imprimia nada desp del cronograma

--- a/main.tex
+++ b/main.tex
@@ -46,6 +46,7 @@
 \input{sections/resultados_e_indicadores.tex} % ORDENAR
 \input{sections/cronograma.tex}
 
+\newpage
 \printbibliography
 
 \end{document}
