--- a/sections/actividades.tex
+++ b/sections/actividades.tex
@@ -50,7 +50,7 @@ Esta etapa finaliza con la presentación del informe parcial.
 
 \subsection{Simulaciones}
 El circuito fue diseñado y probado en LTspice \cite{ltspice}, con el fin de verificar el diseño.
-El proceso hasta el día de la fecha podría dividirse en las siguientes secciones:
+El proceso hasta el día de la fecha podría dividirse en las siguientes etapas:
 \begin{enumerate}
     \item Simulación del conversor.
     \item Simulación del rectificador de entrada.
